manejar notificaciones desde la UI

--- a/observables-con-angular/src/app/app.component.html
+++ b/observables-con-angular/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>Observable Values</h1>
 
 <p>{{valueFromObservable}}</p>
+
+<button (click)="emitValue()">emit value</button>
+<button (click)="emitComplete()">emit complete</button>
