combinacion de observables y emicion de eventos

--- a/observables-con-angular/src/app/app.component.html
+++ b/observables-con-angular/src/app/app.component.html
@@ -2,5 +2,7 @@
 
 <p>{{valueFromObservable}}</p>
 
-<button (click)="emitValue()">emit value</button>
+<!-- <button (click)="emitValue()">emit value</button> -->
+<button (click)="printPairs()">print pairs</button>
+<button (click)="printOdds()">print odds</button>
 <button (click)="emitComplete()">emit complete</button>
