--- a/observables-con-angular/src/app/interval-container/interval-container.component.html
+++ b/observables-con-angular/src/app/interval-container/interval-container.component.html
@@ -1,4 +1,1 @@
-<p>{{valueFromObservable}}</p>
-
-<button (click)="printPairs()">print pairs</button>
-<button (click)="printOdds()">print odds</button>
+<p>{{value$ | async}}</p>
