--- a/angular-movies/src/app/app.component.html
+++ b/angular-movies/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container mx-auto">
-  <app-movie-list></app-movie-list>
+  <router-outlet></router-outlet>
 </div>
