pagina de pelicula

--- a/angular-movies/src/app/shared/navbar/navbar.component.html
+++ b/angular-movies/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar bg-base-300">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">Angular Movies</a>
+    <button class="btn btn-ghost text-2xl" [routerLink]="['/movies']" routerLinkActive="router-link-active" >Angular Movies</button>
   </div>
 </div>
