--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -1,1 +1,247 @@
-<p>movie works!</p>
+<div class="xl:my-20">
+  <div class="movie-description flex xl:mt-16 flex-col xl:flex-row">
+    <div class="w-full h-auto sm:h-[30rem] md:h-[40rem] xl:w-6/12 xl:h-auto  justify-center flex xl:p-8">
+      <img class="poster xl:rounded-2xl xl:h-5/6 w-full xl:w-auto object-cover"
+        src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" alt="poster">
+    </div>
+    <div class="w-full xl:w-6/12 px-5 xl:px-0 mt-8 xl:mt-0">
+      <div class="title mb-5">
+        <h1 class="text-7xl font-semibold">Title</h1>
+      </div>
+      <div class="ratign mb-5">
+        <div class="rating">
+          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        </div>
+      </div>
+      <div class="overview mb-5">
+        <h1 class="text-2xl font-normal mb-3">Overview: </h1>
+        <p class="text-md">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ab, eaque repudiandae
+          quos modi omnis
+          corrupti id praesentium cupiditate ipsam odit error dolores voluptatibus perspiciatis similique quis iusto
+          doloribus deserunt.</p>
+      </div>
+      <div class="release-date mb-5">
+        <h1 class="text-2xl font-normal mb-3">Release Date: </h1>
+        <p class="text-lg">12 march 2021</p>
+      </div>
+      <div class="genres mb-5">
+        <h1 class="text-2xl font-normal mb-3">Genres: </h1>
+        <div>
+          <div class="m-1 p-5 text-lg badge badge-primary">primary</div>
+          <div class="m-1 p-5 text-lg badge badge-secondary">secondary</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+          <div class="m-1 p-5 text-lg badge badge-accent">accent</div>
+        </div>
+      </div>
+      <div class="production_companies mb-5">
+        <h1 class="text-2xl font-normal mb-3">Producers: </h1>
+        <div class="mb-5 flex flex-wrap">
+          <div class="avatar flex flex-col justify-center items-center mx-3 mb-3">
+            <div class="w-24 rounded-full">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+            <p>Warner</p>
+          </div>
+          <div class="avatar flex flex-col justify-center items-center mx-3 mb-3">
+            <div class="w-24 rounded-full">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+            <p>Warner</p>
+          </div>
+          <div class="avatar flex flex-col justify-center items-center mx-3 mb-3">
+            <div class="w-24 rounded-full">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+            <p>Warner</p>
+          </div>
+          <div class="avatar flex flex-col justify-center items-center mx-3 mb-3">
+            <div class="w-24 rounded-full">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+            <p>Warner</p>
+          </div>
+          <div class="avatar flex flex-col justify-center items-center mx-3 mb-3">
+            <div class="w-24 rounded-full">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+            <p>Warner</p>
+          </div>
+        </div>
+      </div>
+      <div class="statistics mb-5">
+        <h1 class="text-2xl font-normal mb-3">Statistics: </h1>
+        <div class="flex justify-center xl:justify-start">
+          <div class="stats shadow">
+            <div class="stat place-items-center">
+              <div class="stat-title">Budget</div>
+              <div class="stat-value">31K</div>
+              <!-- <div class="stat-desc">From January 1st to February 1st</div> -->
+            </div>
+
+            <div class="stat place-items-center">
+              <div class="stat-title">Popularity</div>
+              <div class="stat-value text-secondary">4,200</div>
+              <!-- <div class="stat-desc text-secondary">↗︎ 40 (2%)</div> -->
+            </div>
+
+            <div class="stat place-items-center">
+              <div class="stat-title">Revenue</div>
+              <div class="stat-value">1,200</div>
+              <!-- <div class="stat-desc">↘︎ 90 (14%)</div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="homepage mb-5">
+        <h1 class="text-2xl font-normal mb-3">Homepage: </h1>
+        <a class="link link-accent">www.google.com</a>
+      </div>
+      <div class="actions mb-5">
+        <h1 class="text-2xl font-normal mb-3">Actions: </h1>
+        <button class="mr-3 btn btn-outline btn-accent">Edit <svg xmlns="http://www.w3.org/2000/svg" width="16"
+            height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+            <path
+              d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
+          </svg> </button>
+
+        <button class="mr-3 btn btn-outline btn-primary" onclick="my_modal_1.showModal()">Remove
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+            viewBox="0 0 16 16">
+            <path
+              d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+            <path
+              d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="movie-gallery mt-16">
+    <details class="collapse bg-base-200">
+      <summary class="collapse-title text-3xl font-medium">Gallery</summary>
+      <div class="collapse-content flex flex-wrap">
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
+          alt="Tailwind CSS Carousel component" />
+      </div>
+    </details>
+  </div>
+  <div class="movie-gallery mt-10">
+    <details class="collapse bg-base-200">
+      <summary class="collapse-title text-3xl font-medium">Reviews</summary>
+      <div class="collapse-content">
+        <div class="review flex m-7 mb-10">
+          <div class="avatar">
+            <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+          </div>
+          <div class="content flex flex-col">
+            <div class="name text-lg font-medium text-secondary">Homero Tompson</div>
+            <div class="review text-md">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab qui doloribus eaque tempore, doloremque
+              expedita sequi quasi? Saepe, porro est suscipit vitae veniam vero autem iusto aliquam repudiandae id
+              placeat?
+              Facilis architecto odio quas nisi quis debitis
+            </div>
+          </div>
+        </div>
+        <div class="review flex m-7 mb-10">
+          <div class="avatar">
+            <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+          </div>
+          <div class="content flex flex-col">
+            <div class="name text-lg font-medium text-secondary">Homero Tompson</div>
+            <div class="review text-md">
+              Lorem ipsum dolor sit amet consec
+            </div>
+          </div>
+        </div>
+        <div class="review flex m-7 mb-10">
+          <div class="avatar">
+            <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+            </div>
+          </div>
+          <div class="content flex flex-col">
+            <div class="name text-lg font-medium text-secondary">Homero Tompson</div>
+            <div class="review text-md">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab qui doloribus eaque tempore, doloremque
+              expedita sequi quasi? Saepe, porro est suscipit vitae veniam vero autem iusto aliquam repudiandae id
+              placeat?
+              Facilis architecto odio quas nisi quis debitis rem accusamus quisquam, fugiat quia nobis facere recusandae
+              sunt cum ab asperiores nam similique eos dicta quae sapiente aperiam fuga. Dignissimos, modi quidem!
+              Temporibus vel praesentium optio, doloribus molestias error distinctio cupiditate magnam quos deleniti
+              ullam, nisi quaerat sequi incidunt! Perspiciatis inventore autem sit, repellendus pariatur molestias quam
+              aspernatur debitis magni in voluptas.
+            </div>
+          </div>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
+
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box">
+    <h3 class="font-bold text-lg">Warning!</h3>
+    <p class="py-4">Are you sure you want to delete this movie?</p>
+    <div class="modal-action">
+      <form method="dialog">
+        <button class="mr-3 btn btn-primary">Remove <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+            <path
+              d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z" />
+            <path
+              d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
+          </svg></button>
+        <button class="mr-3 btn btn-accent">Cancel <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+            <path
+              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+          </svg></button>
+      </form>
+    </div>
+  </div>
+</dialog>
