formulario de pelicula

--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -107,7 +107,7 @@
       </div>
       <div class="actions mb-5">
         <h1 class="text-2xl font-normal mb-3">Actions: </h1>
-        <button [routerLink]="['/edit-movies/123']" class="mr-3 btn btn-outline btn-accent">
+        <button [routerLink]="['/edit-movie/123']" class="mr-3 btn btn-outline btn-accent">
           Edit
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
             viewBox="0 0 16 16">
