erreglo de responsividad de lista de peliculas

--- a/angular-movies/src/app/pages/edit-movie/edit-movie.component.html
+++ b/angular-movies/src/app/pages/edit-movie/edit-movie.component.html
@@ -43,7 +43,7 @@
       <input type="text" placeholder="www.movie.com" name="homepage" class="input input-bordered w-full" />
     </div>
     <div class="flex justify-end my-8">
-      <button [routerLink]="['/movie/123']" class="mr-3 btn btn-outline btn-accent">
+      <button [routerLink]="['/movie/123']" class="btn btn-outline btn-accent">
         Save
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-reels" viewBox="0 0 16 16">
           <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0M1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0"/>
