formulario de creacion de pelicula

--- a/angular-movies/src/app/shared/navbar/navbar.component.html
+++ b/angular-movies/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="navbar bg-base-300">
+<div class="navbar bg-base-300 py-5">
   <div class="flex-1">
-    <button class="btn btn-ghost text-2xl" [routerLink]="['/movies']" routerLinkActive="router-link-active" >Angular Movies</button>
+    <button class="btn btn-ghost text-3xl" [routerLink]="['/movies']" routerLinkActive="router-link-active" >Angular Movies</button>
   </div>
 </div>
