--- a/angular-movies/src/app/pages/movie-list/movie-list.component.html
+++ b/angular-movies/src/app/pages/movie-list/movie-list.component.html
@@ -13,25 +13,29 @@
     </button>
   </div>
   <div class="flex flex-wrap">
-    <div class="w-full sm:w-2/4 lg:w-1/3 xl:w-1/4 p-3">
-      <div class="card bg-neutral shadow-xl">
-        <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
-        <div class="card-body">
-          <h2 class="card-title">Shoes!</h2>
-          <p>If a dog chews shoes whose shoes does he choose?</p>
-          <div class="card-actions justify-end">
-            <button [routerLink]="['/movie/123']" routerLinkActive="router-link-active" class="btn btn-primary">Buy Now
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-camera-reels" viewBox="0 0 16 16">
-                <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0M1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0" />
-                <path
-                  d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2zm6 8.73V7.27l-3.5 1.555v4.35zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                <path d="M9 6a3 3 0 1 0 0-6 3 3 0 0 0 0 6M7 3a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
-              </svg></button>
+    <ng-container *ngFor="let movie of movies">
+      <div class="w-full sm:w-2/4 lg:w-1/3 xl:w-1/4 p-3">
+        <div class="card bg-neutral shadow-xl">
+          <figure><img [src]="movie.backdrop_path" class="h-96 w-full object-cover object-top"/></figure>
+          <div class="card-body">
+            <h2 class="card-title text-2xl">{{movie.original_title}}</h2>
+            <p class="my-3 text-ellipsis line-clamp-3">{{movie.overview}}</p>
+            <div class="card-actions justify-end">
+              <button [routerLink]="['/movie/' + movie.id]" class="btn btn-primary">
+                View Details
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-camera-reels" viewBox="0 0 16 16">
+                  <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0M1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0" />
+                  <path
+                    d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2zm6 8.73V7.27l-3.5 1.555v4.35zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
+                  <path d="M9 6a3 3 0 1 0 0-6 3 3 0 0 0 0 6M7 3a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </ng-container>
   </div>
   <!-- <div class="flex justify-center my-3 py-8">
     <div class="join">
