--- a/angular-movies/src/app/pages/movie-list/movie-list.component.html
+++ b/angular-movies/src/app/pages/movie-list/movie-list.component.html
@@ -3,7 +3,8 @@
     <h1 class="text-5xl md:text-6xl xl:text-7xl xl:text-8xl font-medium">
       Movies
     </h1>
-    <button class="btn btn-outline btn-accent" [routerLink]="['/create-movie/123']">
+    <!-- <button class="btn btn-outline btn-accent" [routerLink]="['/create-movie/123']"> -->
+    <button class="btn btn-outline btn-accent" (click)="showMovieForm()">
       Add movie
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus"
         viewBox="0 0 16 16">
@@ -16,7 +17,7 @@
     <ng-container *ngFor="let movie of movies">
       <div class="w-full sm:w-2/4 lg:w-1/3 xl:w-1/4 p-3">
         <div class="card bg-neutral shadow-xl">
-          <figure><img [src]="movie.backdrop_path" class="h-96 w-full object-cover object-top"/></figure>
+          <figure><img [src]="movie.backdrop_path" class="h-96 w-full object-cover object-top" /></figure>
           <div class="card-body">
             <h2 class="card-title text-2xl">{{movie.original_title}}</h2>
             <p class="my-3 text-ellipsis line-clamp-3">{{movie.overview}}</p>
@@ -46,3 +47,7 @@
     </div>
   </div> -->
 </div>
+
+<ng-container *ngIf="showModal">
+  <app-movie-form></app-movie-form>
+</ng-container>
