--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -1,8 +1,8 @@
 <div class="xl:my-20">
   <div class="movie-description flex xl:mt-16 flex-col xl:flex-row">
     <div class="w-full h-auto sm:h-[30rem] md:h-[40rem] xl:w-6/12 xl:h-auto  justify-center flex xl:p-8">
-      <img class="poster xl:rounded-2xl xl:h-5/6 w-full xl:w-auto object-cover"
-        [src]="movie.backdrop_path" alt="poster">
+      <img class="poster xl:rounded-2xl xl:h-5/6 w-full xl:w-auto object-cover object-top" [src]="movie.backdrop_path"
+        alt="poster">
     </div>
     <div class="w-full xl:w-6/12 px-5 xl:px-0 mt-8 xl:mt-0">
       <div class="title mb-5">
@@ -17,15 +17,18 @@
           <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
         </div>
       </div>
-      <div class="overview mb-5">
+
+      <div *ngIf="movie?.overview" class="overview mb-5">
         <h1 class="text-2xl font-normal mb-3">Overview: </h1>
         <p class="text-md">{{movie.overview}}</p>
       </div>
-      <div class="release-date mb-5">
+
+      <div *ngIf="movie?.release_date" class="release-date mb-5">
         <h1 class="text-2xl font-normal mb-3">Release Date: </h1>
         <p class="text-lg">{{movie.release_date | date}}</p>
       </div>
-      <div class="genres mb-5">
+
+      <div *ngIf="movie.genres.length > 0" class="genres mb-5">
         <h1 class="text-2xl font-normal mb-3">Genres: </h1>
         <div>
           <ng-container *ngFor="let genre of movie.genres">
@@ -33,7 +36,8 @@
           </ng-container>
         </div>
       </div>
-      <div class="production_companies mb-5">
+
+      <div *ngIf="movie.production_companies.length > 0" class="production_companies mb-5">
         <h1 class="text-2xl font-normal mb-3">Producers: </h1>
         <div class="mb-5 flex flex-wrap">
           <ng-container *ngFor="let producer of movie.production_companies">
@@ -46,23 +50,24 @@
           </ng-container>
         </div>
       </div>
-      <div class="statistics mb-5">
+
+      <div *ngIf="movie.budget || movie.popularity || movie.revenue" class="statistics mb-5">
         <h1 class="text-2xl font-normal mb-3">Statistics: </h1>
         <div class="flex justify-center xl:justify-start">
           <div class="stats shadow">
-            <div class="stat place-items-center">
+            <div *ngIf="movie.budget" class="stat place-items-center">
               <div class="stat-title">Budget</div>
               <div class="stat-value">{{movie.budget}}</div>
               <!-- <div class="stat-desc">From January 1st to February 1st</div> -->
             </div>
 
-            <div class="stat place-items-center">
+            <div *ngIf="movie.popularity" class="stat place-items-center">
               <div class="stat-title">Popularity</div>
               <div class="stat-value text-secondary">{{movie.popularity}}</div>
               <!-- <div class="stat-desc text-secondary">↗︎ 40 (2%)</div> -->
             </div>
 
-            <div class="stat place-items-center">
+            <div *ngIf="movie.revenue" class="stat place-items-center">
               <div class="stat-title">Revenue</div>
               <div class="stat-value">{{movie.revenue}}</div>
               <!-- <div class="stat-desc">↘︎ 90 (14%)</div> -->
@@ -70,13 +75,14 @@
           </div>
         </div>
       </div>
+
       <div *ngIf="movie.homepage" class="homepage mb-5">
         <h1 class="text-2xl font-normal mb-3">Homepage: </h1>
         <a class="link link-accent">{{movie.homepage}}</a>
       </div>
       <div class="actions mb-5">
         <h1 class="text-2xl font-normal mb-3">Actions: </h1>
-        <button [routerLink]="['/edit-movie/123']" class="mr-3 btn btn-outline btn-accent">
+        <button (click)="showMovieForm()" class="mr-3 btn btn-outline btn-accent">
           Edit
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
             viewBox="0 0 16 16">
@@ -84,7 +90,7 @@
               d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
           </svg>
         </button>
-        <button class="mr-3 btn btn-outline btn-primary" onclick="my_modal_1.showModal()">Remove
+        <button class="mr-3 btn btn-outline btn-primary" onclick="removeModal.showModal()">Remove
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
             viewBox="0 0 16 16">
             <path
@@ -96,41 +102,43 @@
       </div>
     </div>
   </div>
-  <div class="movie-gallery mt-16">
+
+  <div *ngIf="images.backdrops.length > 0" class="movie-gallery mt-16">
     <details class="collapse bg-base-200">
       <summary class="collapse-title text-3xl font-medium">Gallery</summary>
       <div class="collapse-content flex flex-wrap">
-        <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" class="rounded-2xl h-56 m-3"
-          alt="Tailwind CSS Carousel component" />
+        <ng-container *ngFor="let image of images.backdrops">
+          <img [src]="image.file_path" class="rounded-2xl h-56 m-3" alt="Tailwind CSS Carousel component" />
+        </ng-container>
       </div>
     </details>
   </div>
-  <div class="movie-gallery mt-10">
+
+  <div *ngIf="reviews.results.length > 0" class="movie-gallery mt-10">
     <details class="collapse bg-base-200">
       <summary class="collapse-title text-3xl font-medium">Reviews</summary>
       <div class="collapse-content">
-        <div class="review flex m-7 mb-10">
-          <div class="avatar">
-            <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
-              <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+        <ng-container *ngFor="let review of reviews.results">
+          <div class="review flex m-7 mb-10">
+            <div class="avatar">
+              <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+              </div>
+            </div>
+            <div class="content flex flex-col">
+              <div class="name text-lg font-medium text-secondary">{{review.author}}</div>
+              <div class="review text-md">
+                {{review.content}}
+              </div>
             </div>
           </div>
-          <div class="content flex flex-col">
-            <div class="name text-lg font-medium text-secondary">Homero Tompson</div>
-            <div class="review text-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab qui doloribus eaque tempore, doloremque
-              expedita sequi quasi? Saepe, porro est suscipit vitae veniam vero autem iusto aliquam repudiandae id
-              placeat?
-              Facilis architecto odio quas nisi quis debitis
-            </div>
-          </div>
-        </div>
+        </ng-container>
       </div>
     </details>
   </div>
 </div>
 
-<dialog id="my_modal_1" class="modal">
+<dialog id="removeModal" class="modal">
   <div class="modal-box">
     <h3 class="font-bold text-lg">Warning!</h3>
     <p class="py-4">Are you sure you want to delete this movie?</p>
@@ -153,3 +161,7 @@
     </div>
   </div>
 </dialog>
+
+<ng-container *ngIf="showMovieFormModal">
+  <app-movie-form></app-movie-form>
+</ng-container>
