--- a/angular-movies/src/app/pages/movie-list/movie-list.component.html
+++ b/angular-movies/src/app/pages/movie-list/movie-list.component.html
@@ -14,7 +14,7 @@
     </button>
   </div>
   <div class="flex flex-wrap">
-    <ng-container *ngFor="let movie of movies">
+    <ng-container *ngFor="let movie of (movies$ | async)">
       <div class="w-full sm:w-2/4 lg:w-1/3 xl:w-1/4 p-3">
         <div class="card bg-neutral shadow-xl">
           <figure><img [src]="movie.backdrop_path" class="h-96 w-full object-cover object-top" /></figure>
