--- a/angular-movies/src/app/shared/movie-form/movie-form.component.html
+++ b/angular-movies/src/app/shared/movie-form/movie-form.component.html
@@ -15,11 +15,11 @@
         </div>
         <div class="flex flex-col mb-2">
           <label class="my-2 ml-3 text-xl font-normal" for="image">Image:</label>
-          <input formControlName="image" type="text" placeholder="www.movie.com/img.png" name="image" class="input input-bordered w-full" />
+          <input formControlName="backdrop_path" type="text" placeholder="www.movie.com/img.png" name="image" class="input input-bordered w-full" />
         </div>
         <div class="flex flex-col mb-2">
           <label class="my-2 ml-3 text-xl font-normal" for="release-date">Release Date:</label>
-          <input formControlName="release-date" type="date" name="release-date" class="input input-bordered w-full" />
+          <input formControlName="release_date" type="date" name="release-date" class="input input-bordered w-full" />
         </div>
         <div class="flex flex-col mb-2">
           <label class="my-2 ml-3 text-xl font-normal" for="budget">Budget:</label>
