--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -169,7 +169,7 @@
   </dialog>
   
   <ng-container *ngIf="showMovieFormModal">
-    <app-movie-form></app-movie-form>
+    <app-movie-form [movieData]="movie"></app-movie-form>
   </ng-container>
 
 </ng-container>
