--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -109,39 +109,43 @@
       </div>
     </div>
   
-    <div *ngIf="images.backdrops.length > 0" class="movie-gallery mt-16">
-      <details class="collapse bg-base-200">
-        <summary class="collapse-title text-3xl font-medium">Gallery</summary>
-        <div class="collapse-content flex flex-wrap">
-          <ng-container *ngFor="let image of images.backdrops">
-            <img [src]="image.file_path" class="rounded-2xl h-56 m-3" alt="Tailwind CSS Carousel component" />
-          </ng-container>
-        </div>
-      </details>
-    </div>
+    <ng-container *ngIf="(images$ | async) as images">
+      <div *ngIf="images.length > 0" class="movie-gallery mt-16">
+        <details class="collapse bg-base-200">
+          <summary class="collapse-title text-3xl font-medium">Gallery</summary>
+          <div class="collapse-content flex flex-wrap">
+            <ng-container *ngFor="let image of images">
+              <img [src]="image.file_path" class="rounded-2xl h-56 m-3" alt="Tailwind CSS Carousel component" />
+            </ng-container>
+          </div>
+        </details>
+      </div>
+    </ng-container>
   
-    <div *ngIf="reviews.results.length > 0" class="movie-gallery mt-10">
-      <details class="collapse bg-base-200">
-        <summary class="collapse-title text-3xl font-medium">Reviews</summary>
-        <div class="collapse-content">
-          <ng-container *ngFor="let review of reviews.results">
-            <div class="review flex m-7 mb-10">
-              <div class="avatar">
-                <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
-                  <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+    <ng-container *ngIf="(reviews$ | async) as reviews">
+      <div *ngIf="reviews.length > 0" class="movie-gallery mt-10">
+        <details class="collapse bg-base-200">
+          <summary class="collapse-title text-3xl font-medium">Reviews</summary>
+          <div class="collapse-content">
+            <ng-container *ngFor="let review of reviews">
+              <div class="review flex m-7 mb-10">
+                <div class="avatar">
+                  <div class="w-16 h-16 mr-5 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                    <img src="https://daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg" />
+                  </div>
+                </div>
+                <div class="content flex flex-col">
+                  <div class="name text-lg font-medium text-secondary">{{review.author}}</div>
+                  <div class="review text-md">
+                    {{review.content}}
+                  </div>
                 </div>
               </div>
-              <div class="content flex flex-col">
-                <div class="name text-lg font-medium text-secondary">{{review.author}}</div>
-                <div class="review text-md">
-                  {{review.content}}
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </div>
-      </details>
-    </div>
+            </ng-container>
+          </div>
+        </details>
+      </div>
+    </ng-container>
   </div>
   
   <dialog id="removeModal" class="modal">
@@ -150,7 +154,7 @@
       <p class="py-4">Are you sure you want to delete this movie?</p>
       <div class="modal-action">
         <form method="dialog">
-          <button class="mr-3 btn btn-primary">Remove <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+          <button (click)="deleteMovie(movie.id)" class="mr-3 btn btn-primary">Remove <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
               fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
               <path
                 d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z" />
