--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -19,17 +19,17 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
         </div>
-  
+
         <div *ngIf="movie?.overview" class="overview mb-5">
           <h1 class="text-2xl font-normal mb-3">Overview: </h1>
           <p class="text-md">{{movie.overview}}</p>
         </div>
-  
+
         <div *ngIf="movie?.release_date" class="release-date mb-5">
           <h1 class="text-2xl font-normal mb-3">Release Date: </h1>
           <p class="text-lg">{{movie.release_date | date}}</p>
         </div>
-  
+
         <ng-container *ngIf="movie.genres">
           <div *ngIf="movie.genres.length > 0" class="genres mb-5">
             <h1 class="text-2xl font-normal mb-3">Genres: </h1>
@@ -40,7 +40,7 @@
             </div>
           </div>
         </ng-container>
-  
+
         <ng-container *ngIf="movie.production_companies">
           <div *ngIf="movie.production_companies.length > 0" class="production_companies mb-5">
             <h1 class="text-2xl font-normal mb-3">Producers: </h1>
@@ -56,7 +56,7 @@
             </div>
           </div>
         </ng-container>
-  
+
         <div *ngIf="movie.budget || movie.popularity || movie.revenue" class="statistics mb-5">
           <h1 class="text-2xl font-normal mb-3">Statistics: </h1>
           <div class="flex justify-center xl:justify-start">
@@ -66,13 +66,13 @@
                 <div class="stat-value">{{movie.budget}}</div>
                 <!-- <div class="stat-desc">From January 1st to February 1st</div> -->
               </div>
-  
+
               <div *ngIf="movie.popularity" class="stat place-items-center">
                 <div class="stat-title">Popularity</div>
                 <div class="stat-value text-secondary">{{movie.popularity}}</div>
                 <!-- <div class="stat-desc text-secondary">↗︎ 40 (2%)</div> -->
               </div>
-  
+
               <div *ngIf="movie.revenue" class="stat place-items-center">
                 <div class="stat-title">Revenue</div>
                 <div class="stat-value">{{movie.revenue}}</div>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-  
+
         <div *ngIf="movie.homepage" class="homepage mb-5">
           <h1 class="text-2xl font-normal mb-3">Homepage: </h1>
           <a class="link link-accent">{{movie.homepage}}</a>
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-  
+
     <ng-container *ngIf="(images$ | async) as images">
       <div *ngIf="images.length > 0" class="movie-gallery mt-16">
         <details class="collapse bg-base-200">
@@ -121,7 +121,7 @@
         </details>
       </div>
     </ng-container>
-  
+
     <ng-container *ngIf="(reviews$ | async) as reviews">
       <div *ngIf="reviews.length > 0" class="movie-gallery mt-10">
         <details class="collapse bg-base-200">
@@ -147,15 +147,16 @@
       </div>
     </ng-container>
   </div>
-  
+
   <dialog id="removeModal" class="modal">
     <div class="modal-box">
       <h3 class="font-bold text-lg">Warning!</h3>
       <p class="py-4">Are you sure you want to delete this movie?</p>
       <div class="modal-action">
         <form method="dialog">
-          <button (click)="deleteMovie(movie.id)" class="mr-3 btn btn-primary">Remove <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-              fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+          <button (click)="deleteMovie(movie.id)" class="mr-3 btn btn-primary">Remove <svg
+              xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
               <path
                 d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z" />
               <path
@@ -171,8 +172,9 @@
       </div>
     </div>
   </dialog>
-  
-  <ng-container *ngIf="showMovieFormModal">
+
+
+  <ng-container *ngIf="movieFormDisplayState$ | async">
     <app-movie-form [movieData]="movie"></app-movie-form>
   </ng-container>
 
