--- a/angular-movies/src/app/pages/movie/movie.component.html
+++ b/angular-movies/src/app/pages/movie/movie.component.html
@@ -172,7 +172,7 @@
     </div>
   </dialog>
   
-  <ng-container *ngIf="showMovieFormModal">
+  <ng-container *ngIf="movieFormDisplayState$ | async">
     <app-movie-form [movieData]="movie"></app-movie-form>
   </ng-container>
 
