--- a/angular-movies/src/app/shared/movie-form/movie-form.component.html
+++ b/angular-movies/src/app/shared/movie-form/movie-form.component.html
@@ -2,7 +2,7 @@
   <div class="modal-box max-w-7xl">
     <div class="px-5 mt-8 mb-12">
       <div class="my-5">
-        <h1 class="text-5xl font-semibold">Edit Movie</h1>
+        <h1 class="text-5xl font-semibold">{{movieFormTitle$ | async}}</h1>
       </div>
       <form [formGroup]="movieForm" (ngSubmit)="onSubmit()">
         <div class="flex flex-col mb-2">
@@ -38,7 +38,7 @@
           <input formControlName="homepage" type="text" placeholder="www.movie.com" name="homepage" class="input input-bordered w-full" />
         </div>
         <div class="flex justify-end my-8">
-          <button class="mr-3 btn btn-outline btn-primary">Cancel <svg xmlns="http://www.w3.org/2000/svg" width="16"
+          <button (click)="onCancel()" class="mr-3 btn btn-outline btn-primary">Cancel <svg xmlns="http://www.w3.org/2000/svg" width="16"
               height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
               <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
               <path
